Add: ability to store product for applications
