# api.yaml
@@ -56,6 +56,10 @@ paths:
           in: query
           type: string
           required: false
+        - name: product
+          in: query
+          type: string
+          required: false
       responses:
         200:
           description: A list of application versions
@@ -68,7 +72,7 @@ paths:
     post:
       description: Create an application version entity and returns the id
       parameters:
-        - name: fact-find
+        - name: application_version
           in: body
           required: true
           schema:
@@ -100,6 +104,8 @@ definitions:
           type: string
         version:
           type: string
+        product:
+          type: string
         __v:
           type: string
     ApplicationVersionCreate:
@@ -110,6 +116,8 @@ definitions:
         application_name:
           type: string
         version:
+          type: string
+        product:
           type: string
     ApplicationVersionSuccessful:
       type: object
